--- a/translations/ru.json
+++ b/translations/ru.json
@@ -1,5 +1,5 @@
 {
-  "greeting": "👋🏻 <b>Привет</b>\nЭто бот для подключения к <b>VPN</b>🛡️\n\nДоступны локации:\n Локация 1\n Локация 2\n\n<b>Как подключиться:</b>\n• нажмите кнопку <b>\"Подключиться\"</b>\n• следуйте короткой инструкции",
+  "greeting": "📋 <b>Правила использования VPN WRMHL</b>\n\n1. Запрещено использовать сервис для противоправной деятельности\n2. Запрещено распространение пиратского или вредоносного контента\n3. Спам и фишинг строго запрещены\n4. Запрещено использование сервиса для DDoS-атак\n5. Один аккаунт предназначен только для одного пользователя\n6. Возврат средств возможен только в исключительных случаях\n7. Администрация оставляет за собой право заблокировать аккаунт при нарушении правил\n\nИспользуя сервис, вы подтверждаете своё согласие с этими правилами.\n\n<b>Доступные локации:</b>\n\n• 🇳🇱 <b>Damnsterdam</b> (Нидерланды) — самый шустрый и популярный.\n• 🇫🇮 <b>VanHelsinki</b> (Финляндия) — стабильное соединение и хорошая приватность.\n• 🇨🇦 <b>Canaduhhh</b> (Канада) — надёжный вариант для повседневного использования.\n• 🇩🇪 <b>Берлинский транзит</b> (RU → DE) — для российских сайтов вы в России, для остального мира — Германия.\n• 🇹🇷 <b>Kebab</b> (Турция) — если вдруг кому нужен турецкий IP.\n• 🇯🇵 <b>Japan</b> (Япония) — ОЧЕНЬ Дальний Восток.",
   "buy_button": "💰 Купить",
   "connect_button": "🔌 Подключиться",
   "back_button": "🔙 Назад",
